--- a/ipa/shahid.plist
+++ b/ipa/shahid.plist
@@ -31,7 +31,7 @@
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
-                <string>Install shahid VIP For free @0x_alkurdi_x0</string>
+                <string>Install shahid VIP For free Insta:@0x_alkurdi_x0</string>
             </dict>
         </dict>
     </array>
