--- a/ipa/getover.plist
+++ b/ipa/getover.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://cdn-114.anonfiles.com/53s2P42bu2/9bcc7edf-1624499828/Getting%20Over%20It%20(%20v1.13%20)%20Cydiafire.ipa</string>
+                    <string>https://cdn-104.anonfiles.com/p2C6Pe2cu4/18e4f11a-1624501872/Getting%20Over%20It_1.13_1624500490.ipa</string>
                 </dict>
                 <dict>
                     <key>kind</key>
